Adding mixins for vertical stripes.

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,42 @@
   </head>
 
   <body>
+    <h3>Three equal columns</h3>
+    <!--Belgium-->
+    <div class="flag flag-be"></div>
+    <!--Ivory Coast-->
+    <div class="flag flag-ci"></div>
+    <!--France-->
     <div class="flag flag-fr"></div>
+    <!--Guinea-->
+    <div class="flag flag-gn"></div>
+    <!--Italy-->
+    <div class="flag flag-it"></div>
+    <!--Ireland-->
+    <div class="flag flag-ie"></div>
+    <!--Mexico-->
+    <div class="flag flag-mx"></div>
+    <!--Mali-->
+    <div class="flag flag-ml"></div>
+    <!--Romania-->
+    <div class="flag flag-ro"></div>
+    <!--Senegal-->
+    <div class="flag flag-se"></div>
+    <!--Chad-->
+    <div class="flag flag-td"></div>
+
+
+    <h3>Three equal columns with a symbol</h3>
+    <!--Afghanistan-->
+    <div class="flag flag-af"></div>
+    <!--Canary Islands-->
+    <div class="flag flag-ic"></div>
+    <!--Cameroon-->
+    <div class="flag flag-cm"></div>
+    <!--Moldova-->
+    <div class="flag flag-md"></div>
+
+
 
   </body>
 
