--- a/app/index.html
+++ b/app/index.html
@@ -134,7 +134,7 @@
       <li><div class="flag flag-kor"></div><strong>Korea, Republic of</strong></li>
       <li><div class="flag flag-kwt"></div><strong>Kuwait</strong></li>
       <li><div class="flag flag-kgz"></div><strong>Kyrgyzstan</strong></li>
-      <li><div class="flag flag-lao"></div><strong>Lao People's Democratic Republic</strong></li>
+      <li><div class="flag flag-lao"></div><strong>Laos</strong></li>
       <li><div class="flag flag-lva"></div><strong>Latvia</strong></li>
       <li><div class="flag flag-lbn"></div><strong>Lebanon</strong></li>
       <li><div class="flag flag-lso"></div><strong>Lesotho</strong></li>
