--- a/app/index.html
+++ b/app/index.html
@@ -130,8 +130,8 @@
       <li><div class="flag flag-kaz"></div><strong>Kazakhstan</strong></li>
       <li><div class="flag flag-ken"></div><strong>Kenya</strong></li>
       <li><div class="flag flag-kir"></div><strong>Kiribati</strong></li>
-      <li><div class="flag flag-prk"></div><strong>Korea, Democratic People's Republic of</strong></li>
-      <li><div class="flag flag-kor"></div><strong>Korea, Republic of</strong></li>
+      <li><div class="flag flag-prk"></div><strong>Korea (North)</strong></li>
+      <li><div class="flag flag-kor"></div><strong>Korea (South)</strong></li>
       <li><div class="flag flag-kwt"></div><strong>Kuwait</strong></li>
       <li><div class="flag flag-kgz"></div><strong>Kyrgyzstan</strong></li>
       <li><div class="flag flag-lao"></div><strong>Laos</strong></li>
