--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
       <li><div class="flag flag-khm"></div><strong>Cambodia</strong></li>
       <li><div class="flag flag-cmr"></div><strong>Cameroon</strong></li>
       <li><div class="flag flag-can"></div><strong>Canada</strong></li>
+      <li><div class="flag flag-ic"></div><strong>Canary</strong></li>
       <li><div class="flag flag-cpv"></div><strong>Cape Verde</strong></li>
       <li><div class="flag flag-cym"></div><strong>Cayman Islands</strong></li>
       <li><div class="flag flag-caf"></div><strong>Central African Republic</strong></li>
