Adding England flag.

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
       <li><div class="flag flag-ecu"></div><strong>Ecuador</strong></li>
       <li><div class="flag flag-egy"></div><strong>Egypt</strong></li>
       <li><div class="flag flag-slv"></div><strong>El Salvador</strong></li>
+      <li><div class="flag flag-eng"></div><strong>England</strong></li>
       <li><div class="flag flag-gnq"></div><strong>Equatorial Guinea</strong></li>
       <li><div class="flag flag-eri"></div><strong>Eritrea</strong></li>
       <li><div class="flag flag-est"></div><strong>Estonia</strong></li>
