--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
       <li><div class="flag flag-arg"></div><strong>Argentina</strong></li>
       <li><div class="flag flag-arm"></div><strong>Armenia</strong></li>
       <li><div class="flag flag-abw"></div><strong>Aruba</strong></li>
+      <li><div class="flag flag-sh-ac"></div><strong>Ascension</strong></li>
       <li><div class="flag flag-aus"></div><strong>Australia</strong></li>
       <li><div class="flag flag-aut"></div><strong>Austria</strong></li>
       <li><div class="flag flag-aze"></div><strong>Azerbaijan</strong></li>
@@ -200,7 +201,7 @@
       <li><div class="flag flag-rus"></div><strong>Russian Federation</strong></li>
       <li><div class="flag flag-rwa"></div><strong>Rwanda</strong></li>
       <li><div class="flag flag-blm"></div><strong>Saint Barthélemy</strong></li>
-      <li><div class="flag flag-shn"></div><strong>Saint Helena, Ascension and Tristan da Cunha</strong></li>
+      <li><div class="flag flag-sh-sh"></div><strong>Saint Helena</strong></li>
       <li><div class="flag flag-kna"></div><strong>Saint Kitts and Nevis</strong></li>
       <li><div class="flag flag-lca"></div><strong>Saint Lucia</strong></li>
       <li><div class="flag flag-maf"></div><strong>Saint Martin (French part)</strong></li>
@@ -241,6 +242,7 @@
       <li><div class="flag flag-tkl"></div><strong>Tokelau</strong></li>
       <li><div class="flag flag-ton"></div><strong>Tonga</strong></li>
       <li><div class="flag flag-tto"></div><strong>Trinidad and Tobago</strong></li>
+      <li><div class="flag flag-sh-ta"></div><strong>Tristan da Cunha</strong></li>
       <li><div class="flag flag-tun"></div><strong>Tunisia</strong></li>
       <li><div class="flag flag-tur"></div><strong>Turkey</strong></li>
       <li><div class="flag flag-tkm"></div><strong>Turkmenistan</strong></li>
