--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2038,8 +2038,10 @@
             <strong class="c-flaglist--name">Zambia</strong>
           </li>
           <li class="c-flaglist--item">
-            <div class="c-flaglist--showcase-inner">
-              <div class="c-flag c-flag__zwe"></div>
+            <div class="c-flaglist--showcase">
+              <div class="c-flaglist--showcase-inner">
+                <div class="c-flag c-flag__zwe"></div>
+              </div>
             </div>
             <strong class="c-flaglist--name">Zimbabwe</strong>
           </li>
