Hiding some hard-to-do flags

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -61,7 +61,7 @@
             </div>
             <strong class="c-flaglist--name">Algeria</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__asm"></div>
@@ -69,7 +69,7 @@
             </div>
             <strong class="c-flaglist--name">American Samoa</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__and"></div>
@@ -101,7 +101,7 @@
             </div>
             <strong class="c-flaglist--name">Antigua and Barbuda</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__arg"></div>
@@ -349,7 +349,7 @@
             </div>
             <strong class="c-flaglist--name">Canada</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__ic"></div>
@@ -477,7 +477,7 @@
             </div>
             <strong class="c-flaglist--name">Côte d'Ivoire</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__hrv"></div>
@@ -541,7 +541,7 @@
             </div>
             <strong class="c-flaglist--name">Dominica</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__dom"></div>
@@ -549,7 +549,7 @@
             </div>
             <strong class="c-flaglist--name">Dominican Republic</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__ecu"></div>
@@ -565,7 +565,7 @@
             </div>
             <strong class="c-flaglist--name">Egypt</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__slv"></div>
@@ -581,7 +581,7 @@
             </div>
             <strong class="c-flaglist--name">England</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__gnq"></div>
@@ -765,7 +765,7 @@
             </div>
             <strong class="c-flaglist--name">Guam</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__gtm"></div>
@@ -805,7 +805,7 @@
             </div>
             <strong class="c-flaglist--name">Guyana</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__hti"></div>
@@ -861,7 +861,7 @@
             </div>
             <strong class="c-flaglist--name">Iceland</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__ind"></div>
@@ -1189,7 +1189,7 @@
             </div>
             <strong class="c-flaglist--name">Mayotte</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__mex"></div>
@@ -1205,7 +1205,7 @@
             </div>
             <strong class="c-flaglist--name">Micronesia, Federated States of</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__mda"></div>
@@ -1229,7 +1229,7 @@
             </div>
             <strong class="c-flaglist--name">Mongolia</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__mne"></div>
@@ -1317,7 +1317,7 @@
             </div>
             <strong class="c-flaglist--name">New Zealand</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__nic"></div>
@@ -1421,7 +1421,7 @@
             </div>
             <strong class="c-flaglist--name">Papua New Guinea</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__pry"></div>
@@ -1581,7 +1581,7 @@
             </div>
             <strong class="c-flaglist--name">Samoa</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__smr"></div>
@@ -1613,7 +1613,7 @@
             </div>
             <strong class="c-flaglist--name">Senegal</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__srb"></div>
@@ -1653,7 +1653,7 @@
             </div>
             <strong class="c-flaglist--name">Sint Maarten (Dutch part)</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__svk"></div>
@@ -1661,7 +1661,7 @@
             </div>
             <strong class="c-flaglist--name">Slovakia</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__svn"></div>
@@ -1709,7 +1709,7 @@
             </div>
             <strong class="c-flaglist--name">South Sudan</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__esp"></div>
@@ -1749,7 +1749,7 @@
             </div>
             <strong class="c-flaglist--name">Svalbard and Jan Mayen</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__swz"></div>
@@ -1901,7 +1901,7 @@
             </div>
             <strong class="c-flaglist--name">Tuvalu</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__uga"></div>
