--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -293,7 +293,7 @@
             </div>
             <strong class="c-flaglist--name">British Indian Ocean Territory</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__brn"></div>
