--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -117,7 +117,7 @@
             </div>
             <strong class="c-flaglist--name">Armenia</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__unknown">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__abw"></div>
