Adding England, Scotland, Switzerland, Greece, Palau, Tonga

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -717,7 +717,7 @@
             </div>
             <strong class="c-flaglist--name">Ghana</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__gib"></div>
@@ -1061,7 +1061,7 @@
             </div>
             <strong class="c-flaglist--name">Libya</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__lie"></div>
@@ -1604,6 +1604,14 @@
               </div>
             </div>
             <strong class="c-flaglist--name">Saudi Arabia</strong>
+          </li>
+          <li class="c-flaglist--item">
+            <div class="c-flaglist--showcase">
+              <div class="c-flaglist--showcase-inner">
+                <div class="c-flag c-flag__sct"></div>
+              </div>
+            </div>
+            <strong class="c-flaglist--name">Scotland</strong>
           </li>
           <li class="c-flaglist--item">
             <div class="c-flaglist--showcase">
