Add UAE, Togo and Western Sahara

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -205,7 +205,7 @@
             </div>
             <strong class="c-flaglist--name">Belgium</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__blz"></div>
@@ -221,7 +221,7 @@
             </div>
             <strong class="c-flaglist--name">Benin</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__bmu"></div>
@@ -285,7 +285,7 @@
             </div>
             <strong class="c-flaglist--name">Brazil</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__iot"></div>
@@ -365,7 +365,7 @@
             </div>
             <strong class="c-flaglist--name">Cape Verde</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__cym"></div>
@@ -413,7 +413,7 @@
             </div>
             <strong class="c-flaglist--name">Christmas Island</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__cck"></div>
@@ -501,7 +501,7 @@
             </div>
             <strong class="c-flaglist--name">Curaçao</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__cyp"></div>
@@ -533,7 +533,7 @@
             </div>
             <strong class="c-flaglist--name">Djibouti</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__dma"></div>
@@ -613,7 +613,7 @@
             </div>
             <strong class="c-flaglist--name">Ethiopia</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__flk"></div>
@@ -629,7 +629,7 @@
             </div>
             <strong class="c-flaglist--name">Faroe Islands</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__fji"></div>
@@ -661,7 +661,7 @@
             </div>
             <strong class="c-flaglist--name">French Guiana</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__pyf"></div>
@@ -757,7 +757,7 @@
             </div>
             <strong class="c-flaglist--name">Guadeloupe</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__gum"></div>
@@ -821,7 +821,7 @@
             </div>
             <strong class="c-flaglist--name">Heard Island and McDonald Islands</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__vat"></div>
@@ -901,7 +901,7 @@
             </div>
             <strong class="c-flaglist--name">Ireland</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__imn"></div>
@@ -941,7 +941,7 @@
             </div>
             <strong class="c-flaglist--name">Japan</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__jey"></div>
@@ -973,7 +973,7 @@
             </div>
             <strong class="c-flaglist--name">Kenya</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__kir"></div>
@@ -1141,13 +1141,13 @@
             </div>
             <strong class="c-flaglist--name">Mali</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__mlt"></div>
               </div>
             </div>
-            <strong class="c-flaglist--name">Malta</strong>
+            <strong class="c-flaglist--name">walta</strong>
           </li>
           <li class="c-flaglist--item">
             <div class="c-flaglist--showcase">
@@ -1181,7 +1181,7 @@
             </div>
             <strong class="c-flaglist--name">Mauritius</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__myt"></div>
@@ -1237,7 +1237,7 @@
             </div>
             <strong class="c-flaglist--name">Montenegro</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__msr"></div>
@@ -1253,7 +1253,7 @@
             </div>
             <strong class="c-flaglist--name">Morocco</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__moz"></div>
@@ -1285,7 +1285,7 @@
             </div>
             <strong class="c-flaglist--name">Nauru</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__npl"></div>
@@ -1357,7 +1357,7 @@
             </div>
             <strong class="c-flaglist--name">Norfolk Island</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__mnp"></div>
@@ -1445,7 +1445,7 @@
             </div>
             <strong class="c-flaglist--name">Philippines</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__pcn"></div>
@@ -1461,7 +1461,7 @@
             </div>
             <strong class="c-flaglist--name">Poland</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__prt"></div>
@@ -1517,7 +1517,7 @@
             </div>
             <strong class="c-flaglist--name">Rwanda</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__blm"></div>
@@ -1525,7 +1525,7 @@
             </div>
             <strong class="c-flaglist--name">Saint Barthélemy</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__sh-sh"></div>
@@ -1557,7 +1557,7 @@
             </div>
             <strong class="c-flaglist--name">Saint Martin (French part)</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__spm"></div>
@@ -1653,7 +1653,7 @@
             </div>
             <strong class="c-flaglist--name">Singapore</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__sxm"></div>
@@ -1701,7 +1701,7 @@
             </div>
             <strong class="c-flaglist--name">South Africa</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__sgs"></div>
@@ -1861,7 +1861,7 @@
             </div>
             <strong class="c-flaglist--name">Trinidad and Tobago</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__sh-ta"></div>
@@ -1893,7 +1893,7 @@
             </div>
             <strong class="c-flaglist--name">Turkmenistan</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__tca"></div>
@@ -1997,7 +1997,7 @@
             </div>
             <strong class="c-flaglist--name">Viet Nam</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__vgb"></div>
@@ -2005,7 +2005,7 @@
             </div>
             <strong class="c-flaglist--name">Virgin Islands, British</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__vir"></div>
@@ -2037,7 +2037,7 @@
             </div>
             <strong class="c-flaglist--name">Yemen</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__zmb"></div>
@@ -2045,7 +2045,7 @@
             </div>
             <strong class="c-flaglist--name">Zambia</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__zwe"></div>
