--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -325,7 +325,7 @@
             </div>
             <strong class="c-flaglist--name">Burundi</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__khm"></div>
@@ -669,7 +669,7 @@
             </div>
             <strong class="c-flaglist--name">French Polynesia</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__atf"></div>
@@ -749,7 +749,7 @@
             </div>
             <strong class="c-flaglist--name">Grenada</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__glp"></div>
