--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -269,7 +269,7 @@
             </div>
             <strong class="c-flaglist--name">Botswana</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__bvt"></div>
@@ -405,7 +405,7 @@
             </div>
             <strong class="c-flaglist--name">China</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__cxr"></div>
