Add a few new symbols

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -957,7 +957,7 @@
             </div>
             <strong class="c-flaglist--name">Kazakhstan</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__ken"></div>
@@ -1717,7 +1717,7 @@
             </div>
             <strong class="c-flaglist--name">Spain</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__lka"></div>
