--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1085,7 +1085,7 @@
             </div>
             <strong class="c-flaglist--name">Macao</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__mkd"></div>
@@ -1365,7 +1365,7 @@
             </div>
             <strong class="c-flaglist--name">Norway</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__omn"></div>
