--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1077,7 +1077,7 @@
             </div>
             <strong class="c-flaglist--name">Luxembourg</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__mac"></div>
@@ -1477,7 +1477,7 @@
             </div>
             <strong class="c-flaglist--name">Qatar</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__reu"></div>
@@ -1541,7 +1541,7 @@
             </div>
             <strong class="c-flaglist--name">Saint Lucia</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__maf"></div>
