Add unfinished Turkmenistan

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1877,7 +1877,7 @@
             </div>
             <strong class="c-flaglist--name">Turkey</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__tkm"></div>
@@ -1941,7 +1941,7 @@
             </div>
             <strong class="c-flaglist--name">United States</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__umi"></div>
@@ -1949,7 +1949,7 @@
             </div>
             <strong class="c-flaglist--name">United States Minor Outlying Islands</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__ury"></div>
