fix(links): Use relative imports for gh-pages

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2055,7 +2055,7 @@
     <footer class="c-footer"></footer>
   </div>
   <script src="https://cdn.jsdelivr.net/g/algoliasearch@3.10.2,algoliasearch.helper@2.8.0,lodash@3.10.1,zepto@1.1.6"></script>
-  <script src="/main.js"></script>
+  <script src="./main.js"></script>
   <script>require('app').default.init()</script>
 </body>
 </html>
