--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
             <strong class="c-flaglist--name">Bouvet Island</strong>
           </li>
-          <li class="c-flaglist--item">
+          <li class="c-flaglist--item c-flaglist--item__hard">
             <div class="c-flaglist--showcase">
               <div class="c-flaglist--showcase-inner">
                 <div class="c-flag c-flag__bra"></div>
