--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="l-header">
       <header class="c-header" role="banner">
         <div class="o-outer-container">
-          <h1 class="c-header__title"><a href="/">CSS Flags</a></h1>
+          <h1 class="c-header__title"><a href="https://pixelastic.github.io/css-flags/">CSS Flags</a></h1>
           <div class="c-searchbar">
             <input type="text" class="c-searchbar--input" id="searchbar-input" accesskey="s" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="Search in countries...">
           </div>
