--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1357,7 +1357,7 @@
                   <div class="c-flag c-flag__mkd"></div>
                 </div>
               </div>
-              <strong class="c-flaglist--name">Macedonia, the former Yugoslav Republic of</strong>
+              <strong class="c-flaglist--name">Macedonia</strong>
             </a>
           </div>
           <div class="c-flaglist--item">
