--- a/index.html
+++ b/index.html
@@ -330,17 +330,7 @@
               <strong class="c-flaglist--name">Botswana</strong>
             </a>
           </div>
-          <div class="c-flaglist--item c-flaglist--item__hard">
-            <a href="https://github.com/pixelastic/css-flags/blob/master/app/styles/_flags/bvt.scss">
-              <div class="c-flaglist--showcase">
-                <div class="c-flaglist--showcase-inner">
-                  <div class="c-flag c-flag__bvt"></div>
-                </div>
-              </div>
-              <strong class="c-flaglist--name">Bouvet Island</strong>
-            </a>
-          </div>
-          <div class="c-flaglist--item c-flaglist--item__hard">
+          <div class="c-flaglist--item">
             <a href="https://github.com/pixelastic/css-flags/blob/master/app/styles/_flags/bra.scss">
               <div class="c-flaglist--showcase">
                 <div class="c-flaglist--showcase-inner">
