--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>CSS Flags</title>
   <meta name="description" content="Flags of the world in just one div">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="CSS Flags">
+  <meta name="twitter:description" content="Flags of the world in just one div">
+  <meta name="twitter:creator" content="@pixelastic">
+  <meta name="twitter:image" content="https://pixelastic.github.io/css-flags/card.png">
+  <meta property="og:title" content="CSS Flags">
+  <meta property="og:site_name" content="CSS Flags">
+  <meta property="og:description" content="Flags of the world in just one div">
+  <meta property="og:image" content="https://pixelastic.github.io/css-flags/card.png">
+  <meta property="og:url" content="https://pixelastic.github.io/css-flags/">
   <link rel="shortcut icon" href="./favicon.ico">
   <link href="./main.css" media="all" rel="stylesheet" />
 </head>
