--- a/index.html
+++ b/index.html
@@ -2227,7 +2227,7 @@
                   <div class="c-flag c-flag__twn"></div>
                 </div>
               </div>
-              <strong class="c-flaglist--name">Taiwan, Province of China</strong>
+              <strong class="c-flaglist--name">Taiwan</strong>
             </a>
           </div>
           <div class="c-flaglist--item">
