--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1060,7 +1060,7 @@
               <strong class="c-flaglist--name">Iceland</strong>
             </a>
           </div>
-          <div class="c-flaglist--item c-flaglist--item__hard">
+          <div class="c-flaglist--item">
             <a href="https://github.com/pixelastic/css-flags/blob/master/app/styles/_flags/ind.scss">
               <div class="c-flaglist--showcase">
                 <div class="c-flaglist--showcase-inner">
