--- a/index.html
+++ b/index.html
@@ -1590,7 +1590,7 @@
               <strong class="c-flaglist--name">Nauru</strong>
             </a>
           </div>
-          <div class="c-flaglist--item c-flaglist--item__hard">
+          <div class="c-flaglist--item">
             <a href="https://github.com/pixelastic/css-flags/blob/master/app/styles/_flags/npl.scss">
               <div class="c-flaglist--showcase">
                 <div class="c-flaglist--showcase-inner">
