Adding comments on the clever way to draw stars

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -431,7 +431,7 @@
             </a>
           </div>
           <div class="c-flaglist--item c-flaglist--item__hard">
-            <a href="https://github.com/pixelastic/css-flags/blob/master/app/styles/_flags/ic".scss">
+            <a href="https://github.com/pixelastic/css-flags/blob/master/app/styles/_flags/ic.scss">
               <div class="c-flaglist--showcase">
                 <div class="c-flaglist--showcase-inner">
                   <div class="c-flag c-flag__ic"></div>
